--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/macbook2.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/macbookpro.jpg" alt="">
                     <h2>MacBook Pro
                         <br>
                         <small>November 18, 2016</small>
@@ -93,22 +93,22 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/macbookpro.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/macbookair.jpg" alt="">
                     <h2>Galaxy Instant Hot Chocolate
                         <br>
                         <small>November 18,2016</small>
                     </h2>
-                    <p>Hot Chocolate powdered drink with sugars and sweetener, Add water, Chocolatey taste, Suitable for vegetarians. Preperation: We recommend you use 3 heaped teaspoons per mug, pour hot water over the hot chocolate powder. Stir well and enjoy the silky smoothness. Portion Size: 20g. 10 Servings Per Pack. 200g</p>
+                    <p>MacBook Air lasts up to an incredible 12 hours between charges. So from your morning coffee till your evening commute, you can work unplugged. When it’s time to kick back and relax, you can get up to 12 hours of iTunes movie playback. And with up to 30 days of standby time, you can go away for weeks and pick up right where you left off.</p>
                     
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/macbookair.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/macbook.jpg" alt="">
                     <h2>MacBook Air
                         <br>
                         <small>November 18, 2016</small>
                     </h2>
-                    <p>MacBook Air lasts up to an incredible 12 hours between charges. So from your morning coffee till your evening commute, you can work unplugged. When it’s time to kick back and relax, you can get up to 12 hours of iTunes movie playback. And with up to 30 days of standby time, you can go away for weeks and pick up right where you left off.</p>
+                    <p>Our goal with MacBook was to do the impossible: engineer a full‑size experience into the lightest and most compact Mac notebook ever. That meant reimagining every element to make it not only lighter and thinner but also better. The result is more than just a new notebook. It’s the future of the notebook. And now, with sixth generation Intel processors, improved graphics performance, faster flash storage, and up to 10 hours of battery life,* MacBook is even more capable.</p>
                     <a 
                     <hr>
                 </div>
