--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/macbookair.jpg" alt="">
-                    <h2>Galaxy Instant Hot Chocolate
+                    <h2>MacBook Air
                         <br>
                         <small>November 18,2016</small>
                     </h2>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/macbook.jpg" alt="">
-                    <h2>MacBook Air
+                    <h2>MacBook
                         <br>
                         <small>November 18, 2016</small>
                     </h2>
